# cloudcosting

./: .gitignore  PYPI_SETUP_GUIDE.md  README.md  design.yaml  design_comparison.yaml  implementation_checklist.md  implementation_checklist_comparison.md  pyproject.toml  requirements.yaml  requirements_comparison.yaml  technical_design.yaml  technical_design_comparison.yaml
.github/workflows/: publish_to_pypi.yaml
src/cloudcosting/: __init__.py  __main__.py  cache.py  cli.py  composer.py  config.py  domain.py  estimator.py  formatters.py
src/cloudcosting/providers/: registry.py
src/cloudcosting/providers/aws/: pricing.py  provider.py
src/cloudcosting/providers/aws/calculators/: alb.py  ebs.py  ec2.py  nat_gateway.py  rds.py  s3.py
tests/unit/: test_cache.py  test_composer.py  test_config.py  test_domain.py  test_estimator.py  test_formatters.py
tests/unit/providers/aws/: test_calculators.py  test_rds.py
